--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.4.0",
+    "@sidebase/nuxt-auth": "^0.4.2",
     "nuxt": "3.0.2"
   },
   "dependencies": {
     "@ant-design/icons-vue": "^6.1.0",
+    "@nuxtjs/axios": "^5.13.6",
+    "@pinia/nuxt": "^0.4.7",
     "ant-design-vue": "^3.2.15",
-    "axios": "^1.3.3"
+    "axios": "^1.3.3",
+    "next-auth": "^4.19.2"
   }
 }
