--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@pinia/nuxt": "^0.4.7",
     "ant-design-vue": "^3.2.15",
     "axios": "^1.3.3",
-    "next-auth": "^4.19.2"
+    "next-auth": "^4.19.2",
+    "vue-toastification": "^1.7.14"
   }
 }
